# try-mypy-type-dispatch

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  draft.yml  labeler.yml  tests.yml
docs/: index.md
docs/snippets/: links.txt
notebooks/: template.ipynb
src/try_mypy_type_dispatch/: __init__.py  __main__.py  skeleton.py
tests/: __init__.py  conftest.py  test_skeleton.py
